--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
 		"php": ">=5.4",
         "illuminate/support": "5.*",
-        "sl0wik/laravel-image-editor": "*"
+        "sl0wik/laravel-image-editor": "0.*",
+        "mcamara/laravel-localization": "^1.3"
     },
 	"require-dev": {
 		"phpunit/phpunit": "5.2.*"
