--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		"php": ">=5.4",
         "illuminate/support": "5.*",
         "sl0wik/laravel-image-editor": "0.*",
-        "mcamara/laravel-localization": "^1.3"
+        "mcamara/laravel-localization": "^1.3",
+        "intervention/image": "^2.4"
     },
 	"require-dev": {
 		"phpunit/phpunit": "5.2.*"
